; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_wmavoice.c_tilt_factor.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_wmavoice.c_tilt_factor.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (float (float*, i32)* @tilt_factor to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal float @tilt_factor(float* %0, i32 %1) #0 {
  %3 = alloca float*, align 8
  %4 = alloca i32, align 4
  %5 = alloca float, align 4
  %6 = alloca float, align 4
  store float* %0, float** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load float*, float** %3, align 8
  %8 = load float*, float** %3, align 8
  %9 = load i32, i32* %4, align 4
  %10 = call float @avpriv_scalarproduct_float_c(float* %7, float* %8, i32 %9)
  %11 = fpext float %10 to double
  %12 = fadd double 1.000000e+00, %11
  %13 = fptrunc double %12 to float
  store float %13, float* %5, align 4
  %14 = load float*, float** %3, align 8
  %15 = getelementptr inbounds float, float* %14, i64 0
  %16 = load float, float* %15, align 4
  %17 = load float*, float** %3, align 8
  %18 = load float*, float** %3, align 8
  %19 = getelementptr inbounds float, float* %18, i64 1
  %20 = load i32, i32* %4, align 4
  %21 = sub nsw i32 %20, 1
  %22 = call float @avpriv_scalarproduct_float_c(float* %17, float* %19, i32 %21)
  %23 = fadd float %16, %22
  store float %23, float* %6, align 4
  %24 = load float, float* %6, align 4
  %25 = load float, float* %5, align 4
  %26 = fdiv float %24, %25
  ret float %26
}

declare dso_local float @avpriv_scalarproduct_float_c(float*, float*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
